Corrected a mis-feature that prevented alias virtual servers with no home directory from being backed up in the new format.
When a virtual server is restored from a backup, the pre and post-change commands are called with $VIRTUALSERVER_ACTION set to RESTORE_DOMAIN.
Added the license-info API command for getting the serial number and domain counts for the current Virtualmin install.
---- Changes since 3.71 ----
Updated the bbPress script installer to 1.0.2, SugarCRM to 5.2.0h, Bugzilla to 3.4.1, Roundcube to 0.3-RC1, Joomla to 1.5.14, Wordpress to 2.8.4, Wordpress MU to 2.8.4a, Django to 1.1, OpenGoo to 1.5.1, CMS Made Simple to 1.6.3, ZenCart to 1.3.8a, phpMyAdmin to 3.2.1, LimeSurvey to 1.85plus-build7435-20090810, PiWik to 0.4.3, ZenPhoto to 1.2.6, phpMyFAQ to 2.0.16, SugarCRM to 5.2.0i, and PHPCoin to 1.6.3.
Added security patches for the 1.3.8 version to the Zencart installer.
Removed support for Joomla 1.0 series versions.
Added support for JSON, XML and Perl output to the remote API, enabled with the json=1, xml=1 or perl=1 URL parameters.
Deprecated the feature to write logs via a program, as logging to /var/log/virtualmin is now the default.
Added validation for incorrect SuExec Apache directives.
If a single database backup for a virtual server fails, others will still be backed up.
When editing default scripts in a template, an option to always install the latest version is now available.
Added a bandwidth monitoring option to include relayed email, thanks to Collin from Bisnet.
---- Changes since 3.72 ----
On Sendmail systems with outgoing address mapping enabled, the generic domains file is now correctly updated.
Script installer versions more recent that those included with the current release of Virtualmin can now be downloaded using the Installer Updates section on the Script Installers page. The new versions will typically be released within hours or days of new script releases.