@@ -6,7 +6,7 @@ require './virtual-server-lib.pl';
 if ($in{'dom'}) {
 	$in{'dom'} || &error($text{'pass_ecannot2'});
 	$d = &get_domain($in{'dom'});
-	&can_edit_domain($d) || &error($text{'pass_ecannot'});
+	&can_passwd() && &can_edit_domain($d) || &error($text{'pass_ecannot'});
 	}
 elsif (!&reseller_admin()) {
 	&error($text{'pass_ecannot2'});
